<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>2.7.18</version>
        <relativePath/><!-- lookup parent from repository -->
    </parent>
    <groupId>org.openehealth.app</groupId>
    <artifactId>xds-registry-to-fhir</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <name>IHE XDS.b Registry to FHIR adapter</name>
    <description>IHE XDS.b Registry using a FHIR server as backend</description>
    <properties>
        <java.version>17</java.version>
        <ipf.version>4.8-m5</ipf.version>
        <mockserver.version>5.15.0</mockserver.version>
    </properties>
    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.openehealth.ipf</groupId>
                <artifactId>ipf-dependencies</artifactId>
                <type>pom</type>
                <scope>import</scope>
                <version>${ipf.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>
    <dependencies>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
        </dependency>
        <dependency>
            <groupId>org.apache.camel.springboot</groupId>
            <artifactId>camel-spring-boot-starter</artifactId>
        </dependency>
        <dependency>
            <groupId>org.openehealth.ipf.boot</groupId>
            <artifactId>ipf-xds-spring-boot-starter</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-actuator</artifactId>
        </dependency>
        <dependency>
            <groupId>ca.uhn.hapi.fhir</groupId>
            <artifactId>hapi-fhir-client</artifactId>
        </dependency>
        <dependency>
            <groupId>ca.uhn.hapi.fhir</groupId>
            <artifactId>hapi-fhir-structures-r4</artifactId>
            <exclusions>
                <exclusion>
                    <!-- Not needed for our purpose -->
                    <groupId>com.ibm.icu</groupId>
                    <artifactId>icu4j</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.openehealth.ipf.commons</groupId>
            <artifactId>ipf-commons-ihe-xds</artifactId>
            <classifier>tests</classifier>
            <version>${ipf.version}</version>
        </dependency>
        <dependency>
            <groupId>org.openehealth.ipf.platform-camel</groupId>
            <artifactId>ipf-platform-camel-ihe-mllp</artifactId>
        </dependency>
        <dependency>
            <groupId>org.openehealth.ipf.boot</groupId>
            <artifactId>ipf-hl7-spring-boot-starter</artifactId>
        </dependency>
        <dependency>
            <groupId>org.mock-server</groupId>
            <artifactId>mockserver-junit-jupiter-no-dependencies</artifactId>
            <version>${mockserver.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <configuration>
                    <excludes>
                        <exclude>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                        </exclude>
                    </excludes>
                </configuration>
            </plugin>
        </plugins>
    </build>
    <licenses>
        <license>
            <name>The Apache Software License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
            <distribution>repo</distribution>
        </license>
    </licenses>
    <scm>
        <connection>scm:git:git://github.com/oehf/xds-registry-to-fhir.git</connection>
        <url>http://github.com/oehf/xds-registry-to-fhir</url>
    </scm>
    <issueManagement>
        <system>GitHub Issues</system>
        <url>https://github.com/oehf/xds-registry-to-fhir/issues</url>
    </issueManagement>
    <developers>
        <developer>
            <id>thopap</id>
            <name>Thomas Papke</name>
            <roles>
                <role>Developer</role>
            </roles>
            <timezone>+1</timezone>
        </developer>
    </developers>
</project>
